@@ -1,0 +1,26 @@
+[[observability-metrics]]
+=== Observability - Metrics
+
+Below you can find a list of all samples declared by this project.
+
+[[observability-metrics-handler]]
+==== Handler
+
+____
+Observation for message handlers.
+____
+
+**Metric name** Unable to resolve the name - please check the convention class `org.springframework.integration.support.management.observation.DefaultMessageReceiverObservationConvention` for more details. **Type** `timer` and **base unit** `seconds`.
+
+Fully qualified name of the enclosing class `org.springframework.integration.support.management.observation.IntegrationObservation`.
+
+IMPORTANT: All tags must be prefixed with `spring.integration.` prefix!
+
+.Low cardinality Keys
+[cols="a,a"]
+|===
+|Name | Description
+|`spring.integration.name`|Name of the message handler component.
+|`spring.integration.type`|Type of the component - 'handler'.
+|===
+
