@@ -1,0 +1,23 @@
+[[observability-spans]]
+=== Observability - Spans
+
+Below you can find a list of all spans declared by this project.
+
+[[observability-spans-handler]]
+==== Handler Span
+
+> Observation for message handlers.
+
+**Span name** Unable to resolve the name - please check the convention class `org.springframework.integration.support.management.observation.DefaultMessageReceiverObservationConvention` for more details.
+
+Fully qualified name of the enclosing class `org.springframework.integration.support.management.observation.IntegrationObservation`.
+
+IMPORTANT: All tags and event names must be prefixed with `spring.integration.` prefix!
+
+.Tag Keys
+|===
+|Name | Description
+|`spring.integration.name`|Name of the message handler component.
+|`spring.integration.type`|Type of the component - 'handler'.
+|===
+
